--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "target/bundle.js"
   ],
   "devDependencies": {
-    "docdash": "^1.2.0",
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
+    "docdash": "^2.0.2",
+    "eslint": "^8.53.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^35.5.1",
+    "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "jest": "^27.0.6",
-    "jsdoc": "^3.6.6",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdoc": "^4.0.2",
     "rollup": "^2.44.0",
     "rollup-jest": "^1.1.1"
   },
